# nanuGPT

./: .gitignore  CLAUDE.md  LICENSE  OVERVIEW.md  README.md  STYLE.md  geneate.py  generate.py  gptplay.code-workspace  log.txt  lr_range_test.sh  main.py  nanurl.py  pyproject.toml  run_config.yaml  run_config2.yaml  seed_search.py  setup.py  slurm_owt10b_baseline.sh  tokenize_dataset.py  train.py  train_dist.sh  train_torchrun.sh  volcano_karpathy_classic_owt10b.sh  volcano_karpathy_llmc_owt10b.sh  volcano_karpathy_owt10b.sh  volcano_owt10b_baseline.sh  volcano_owt10b_baseline_adamw.sh  volcano_owt10b_baseline_muon.sh
configs/: baseline.yaml  defaults.yaml  global_defaults.yaml  grok_fast.yaml  grok_large.yaml  grok_wd0.1.yaml  prime223.yaml  prime50k.yaml  wandb.yaml
configs/arithmatic/: base_config.yaml
configs/grokking/: base_config.yaml  baseline.yaml  defaults.yaml  grok_wd0.1.yaml  prime223.yaml  prime223_nanogpt.yaml  prime50k.yaml
configs/hp_tuning/: lr_range_test.yaml
configs/openwebtext/: defaults.yaml
configs/pre_tokenization/: tiktoken_gpt2.yaml
configs/tinystories/: defaults.yaml
configs/tokenize/: base_config.yaml  byte_gpt2.yaml  defaults.yaml  openwebtext.yaml  openwebtext_byte.yaml  openwebtext_llama2.yaml  openwebtext_tiktoken_gpt2.yaml  openwebtext_tiktoken_gpt4.yaml  openwebtext_tiktoken_llama2.yaml  tiktoken_gpt2.yaml  tinyshakespeare.yaml  tinyshakespeare_byte.yaml  tinyshakespeare_llama2.yaml  tinyshakespeare_tiktoken_gpt2.yaml  tinystories_byte.yaml  tinystories_llama2.yaml  tinystories_tiktoken_gpt2.yaml  tinystories_tiktoken_gpt4.yaml  wikitext103_byte.yaml  wikitext103_llama2.yaml  wikitext103_tiktoken_gpt2.yaml  wikitext103_tiktoken_gpt4.yaml  wikitext103_tiktoken_llama2.yaml  wiktext103_byte.yaml
configs/train_gpt2/: base_config.yaml  base_config_karpathy.yaml  base_config_karpathy_nanogpt.yaml  openwebtext.yaml  openwebtext_classic.yaml  openwebtext_karpathy_lllmc.yaml  openwebtext_kellerjohnson_adamw.yaml  openwebtext_tokens10b.yaml  openwebtext_tokens10b_baseline.yaml  openwebtext_tokens10b_classic.yaml  openwebtext_tokens10b_karpathy_llmc.yaml  openwebtext_tokens10b_keller_adamw.yaml  openwebtext_tokens10b_keller_muon.yaml  tinyshakespeare.yaml  tinystories.yaml  wikitext103.yaml  wikitext_103.yaml
configs/train_llama2/: base_config.yaml  openwebtext.yaml  tinyshakespeare.yaml  tinystories.yaml  wikitext103.yaml
configs/train_llm/: base_config.yaml  openwebtext.yaml  tinyshakespeare.yaml  tinystories.yaml
configs/wikitext103/: defaults.yaml
docker/: Dockerfile  README.md  build_and_push.sh
docs/: grokking.md  openwebtext.md  tinyshakespeare.md  tinystories.md  wt103.md
gptplay/: common.py  config.py  data.py  generate.py  glogging.py  logger.py  logging.py  model.py  seed_search.py  timing.py  tokenize_dataset.py  train.py  trainer.py  utils.py
gptplay/analysis/: random_seed_search_stats.py
gptplay/data/: grokking_data.py  hf_dataset.py  tokenize_hf_dataset.py  tokenized_data.py
gptplay/datasets/: grokking_data.py  hf_dataset.py  tokenized_data.py
gptplay/losses/: autoregressive_loss.py  grokking_loss.py
gptplay/models/: hf_model.py  llama2_flash.py  llama2_original.py  nanogpt.py  tiny_transformer.py
gptplay/optimizers/: adam_w.py  adamw_nanogpt.py  adamw_wd.py
gptplay/schedulers/: linear.py  nanogpt_cosine.py
gptplay/tokenizers/: byte_tokenizer.py  grokking_tokenizer.py  (+5 more)
grokking/: arithmatic_tokenizer.py  data.py  logger.py  model.py  play.py  tokenizer.py  train.py  utils.py
model_tests/: benchmark_te_llama3.py
nanugpt/: acc_mem_profiler.py  acc_profile.py  aoai_client.py  common.py  config.py  entropy_cal.py  generate.py  glogging.py  lin_predictor.py  model_sizes.py  plot_utils.py  prompt_exec.py  stopwatch.py  throughput.py  timing.py  tokenize_dataset.py  train.py  utils.py
notes/: diary.md
scripts/: loader_seed_analysis.ipynb  play.py  random_seed_analysis.ipynb  weights_dist.ipynb
tests/: test_arithmatic_dataloaders.py  test_memmap_dataloader.py  test_prompt_exec.py
(+150 files in other folders)
