[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[project]
name = "nanugpt"
version = "0.4.2"
requires-python = ">=3.8" # importlib.metadata requires python >=3.8
authors = [
    { name = "Shital Shah", email = "sytelus@gmail.com" }
]
maintainers = [
    { name = "Shital Shah", email = "sytelus@gmail.com" }
]
description = "Simple, reliable and well tested training code for quick experiments with transformer based models"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research"
]
keywords = ["gpt", "nanogpt", "tinystories", "grokking", "openwebtext", "pretraining"]
dependencies = [
    "einops",
    "wandb",
    "mlflow",
    "sentencepiece",
    "tokenizers",
    "tiktoken",
    "transformers",
    "datasets",
    "tqdm",
    "matplotlib",
    "rich",

    # below if for gsm8k generations
    "pyarrow",
    "orjson",
    "tenacity",
    "openai",

    # for RLVR
    "accelerate",
    "flash-attn",
    "tf-keras", # for some reason, Hugging Face cannot work without it
    "trl",

    # Muon experiments
    "muon-optimizer @ git+https://github.com/KellerJordan/Muon",
]

[project.urls]
Homepage = "https://github.com/sytelus/nanugpt"
Repository = "https://github.com/sytelus/nanugpt"

